--- a/index.html
+++ b/index.html
@@ -13,20 +13,19 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <body class="w3-light-grey">
 <div class="w3-content" style="max-width:1400px">
 <header class="w3-container w3-center w3-padding-32"> 
-<h1><b>MY BLOG</b></h1>
-<p>Welcome to the blog of <span class="w3-tag">unknown</span></p>
+<h1><b>REMOTE GARAGE RIBELLE</b></h1>
+<p>Benvenuti nel remote garage più ribelle che ci sia</p>
 </header>
 <div class="w3-row">
 <div class="w3-col l8 s12">
 <div class="w3-card-4 w3-margin w3-white">
 <img src="/w3images/woods.jpg" alt="Nature" style="width:100%">
 <div class="w3-container">
-<h3><b>TITLE HEADING</b></h3>
-<h5>Title description, <span class="w3-opacity">April 7, 2014</span></h5>
+<h3><b>GP di Gran Bretagna</b></h3>
+<h5>Silverstone, <span class="w3-opacity">3 luglio 2022</span></h5>
 </div>
 <div class="w3-container">
-<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
-tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+<p>Potevamo festeggiare la seconda doppietta stagionale e dare a Carletto l'occasione di allungare su Max e invece...</p>
 <div class="w3-row">
 <div class="w3-col m8 s12">
 <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
@@ -40,12 +39,11 @@ tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies con
 <div class="w3-card-4 w3-margin w3-white">
 <img src="/w3images/bridge.jpg" alt="Norway" style="width:100%">
 <div class="w3-container">
-<h3><b>BLOG ENTRY</b></h3>
-<h5>Title description, <span class="w3-opacity">April 2, 2014</span></h5>
+<h3><b>GP di Ungheria</b></h3>
+<h5>Hungaroring, <span class="w3-opacity">31 luglio 2022</span></h5>
 </div>
 <div class="w3-container">
-<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
-tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+<p>Che si sarà inventato il muretto dei campioni per far finire fuori dal podio entrambe le vetture con conseguente vittoria di super Max partito decimo? Se siete curiosi questo è l'articolo che fa al caso vostro</p>
 <div class="w3-row">
 <div class="w3-col m8 s12">
 <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
