--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <div class="w3-card w3-margin w3-margin-top">
 <img src="/w3images/avatar_g.jpg" style="width:100%">
 <div class="w3-container w3-white">
-<h4><b>My Name</b></h4>
-<p>Just me, myself and I, exploring the universe of uknownment. I have a heart of love and a interest of lorem ipsum and mauris neque quam blog. I want to share my world with you.</p>
+<h4><b>Chi sono?</b></h4>
+<p>Sono il primo prototipo di remote garage, esiliato da qualche parte nel mondo perché il mio capo ha un modo tutto suo di vedere la Formula 1.</p>
 </div>
 </div><hr>
 <div class="w3-card w3-margin">
@@ -89,19 +89,6 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <span>Lorem ipsum dipsum</span>
 </li>  
 </ul>
-</div><hr>
-<div class="w3-card w3-margin">
-<div class="w3-container w3-padding">
-<h4>Tags</h4>
-</div>
-<div class="w3-container w3-white">
-<p><span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">London</span>
-<span class="w3-tag w3-light-grey w3-small w3-margin-bottom">IKEA</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">NORWAY</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">DIY</span>
-<span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Ideas</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Baby</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Family</span>
-<span class="w3-tag w3-light-grey w3-small w3-margin-bottom">News</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Clothing</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Shopping</span>
-<span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Sports</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Games</span>
-</p>
-</div>
 </div>
 </div>
 </div><br>
