--- a/index.html
+++ b/index.html
@@ -1,102 +1,102 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<style>
-body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
-</style>
-</head>
-<body class="w3-light-grey">
-<div class="w3-content" style="max-width:1400px">
-<header class="w3-container w3-center w3-padding-32"> 
-<h1><b>REMOTE GARAGE RIBELLE</b></h1>
-<p>Benvenuti nel remote garage più ribelle che ci sia</p>
-</header>
-<div class="w3-row">
-<div class="w3-col l8 s12">
-<div class="w3-card-4 w3-margin w3-white">
-<img src="/w3images/woods.jpg" alt="Nature" style="width:100%">
-<div class="w3-container">
-<h3><b>GP di Gran Bretagna</b></h3>
-<h5>Silverstone, <span class="w3-opacity">3 luglio 2022</span></h5>
-</div>
-<div class="w3-container">
-<p>Potevamo festeggiare la seconda doppietta stagionale e dare a Carletto l'occasione di allungare su Max e invece...</p>
-<div class="w3-row">
-<div class="w3-col m8 s12">
-<p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
-</div>
-<div class="w3-col m4 w3-hide-small">
-<p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-tag">0</span></span></p>
-</div>
-</div>
-</div>
-</div><hr>
-<div class="w3-card-4 w3-margin w3-white">
-<img src="/w3images/bridge.jpg" alt="Norway" style="width:100%">
-<div class="w3-container">
-<h3><b>GP di Ungheria</b></h3>
-<h5>Hungaroring, <span class="w3-opacity">31 luglio 2022</span></h5>
-</div>
-<div class="w3-container">
-<p>Che si sarà inventato il muretto dei campioni per far finire fuori dal podio entrambe le vetture con conseguente vittoria di super Max partito decimo? Se siete curiosi questo è l'articolo che fa al caso vostro</p>
-<div class="w3-row">
-<div class="w3-col m8 s12">
-<p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
-</div>
-<div class="w3-col m4 w3-hide-small">
-<p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-badge">2</span></span></p>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="w3-col l4">
-<div class="w3-card w3-margin w3-margin-top">
-<img src="/w3images/avatar_g.jpg" style="width:100%">
-<div class="w3-container w3-white">
-<h4><b>Chi sono?</b></h4>
-<p>Sono il primo prototipo di remote garage, esiliato da qualche parte nel mondo perché il mio capo ha un modo tutto suo di vedere la Formula 1.</p>
-</div>
-</div><hr>
-<div class="w3-card w3-margin">
-<div class="w3-container w3-padding">
-<h4>Popular Posts</h4>
-</div>
-<ul class="w3-ul w3-hoverable w3-white">
-<li class="w3-padding-16">
-<img src="/w3images/workshop.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-<span class="w3-large">Lorem</span><br>
-<span>Sed mattis nunc</span>
-</li>
-<li class="w3-padding-16">
-<img src="/w3images/gondol.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-<span class="w3-large">Ipsum</span><br>
-<span>Praes tinci sed</span>
-</li> 
-<li class="w3-padding-16">
-<img src="/w3images/skies.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-<span class="w3-large">Dorum</span><br>
-<span>Ultricies congue</span>
-</li>   
-<li class="w3-padding-16 w3-hide-medium w3-hide-small">
-<img src="/w3images/rock.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-<span class="w3-large">Mingsum</span><br>
-<span>Lorem ipsum dipsum</span>
-</li>  
-</ul>
-</div>
-</div>
-</div><br>
-</div>
-<footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
-<button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Previous</button>
-<button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button>
-<p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-</footer>
-</body>
+  <head>
+    <title>Remote garage ribelle</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <style>
+      body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+    </style>
+  </head>
+  <body class="w3-light-grey">
+    <div class="w3-content" style="max-width:1400px">
+      <header class="w3-container w3-center w3-padding-32"> 
+        <h1><b>REMOTE GARAGE RIBELLE</b></h1>
+        <p>Benvenuti nel remote garage più ribelle che ci sia</p>
+      </header>
+      <div class="w3-row">
+        <div class="w3-col l8 s12">
+          <div class="w3-card-4 w3-margin w3-white">
+            <img src="/w3images/woods.jpg" alt="Nature" style="width:100%">
+            <div class="w3-container">
+              <h3><b>GP di Gran Bretagna</b></h3>
+              <h5>Silverstone, <span class="w3-opacity">3 luglio 2022</span></h5>
+            </div>
+            <div class="w3-container">
+              <p>Potevamo festeggiare la seconda doppietta stagionale e dare a Carletto l'occasione di allungare su Max e invece...</p>
+              <div class="w3-row">
+                <div class="w3-col m8 s12">
+                  <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
+                </div>
+                <div class="w3-col m4 w3-hide-small">
+                  <p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-tag">0</span></span></p>
+                </div>
+              </div>
+            </div>
+          </div><hr>
+          <div class="w3-card-4 w3-margin w3-white">
+            <img src="/w3images/bridge.jpg" alt="Norway" style="width:100%">
+            <div class="w3-container">
+              <h3><b>GP di Ungheria</b></h3>
+              <h5>Hungaroring, <span class="w3-opacity">31 luglio 2022</span></h5>
+            </div>
+            <div class="w3-container">
+              <p>Che si sarà inventato il muretto dei campioni per far finire fuori dal podio entrambe le vetture con conseguente vittoria di super Max partito decimo? Se siete curiosi questo è l'articolo che fa al caso vostro</p>
+              <div class="w3-row">
+                <div class="w3-col m8 s12">
+                  <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
+                </div>
+                <div class="w3-col m4 w3-hide-small">
+                  <p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-badge">2</span></span></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="w3-col l4">
+          <div class="w3-card w3-margin w3-margin-top">
+            <img src="/w3images/avatar_g.jpg" style="width:100%">
+            <div class="w3-container w3-white">
+              <h4><b>Chi sono?</b></h4>
+              <p>Sono il primo prototipo di remote garage, esiliato da qualche parte nel mondo perché il mio capo ha un modo tutto suo di vedere la Formula 1.</p>
+            </div>
+          </div><hr>
+          <div class="w3-card w3-margin">
+            <div class="w3-container w3-padding">
+              <h4>Popular Posts</h4>
+            </div>
+            <ul class="w3-ul w3-hoverable w3-white">
+              <li class="w3-padding-16">
+                <img src="/w3images/workshop.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+                <span class="w3-large">Lorem</span><br>
+                <span>Sed mattis nunc</span>
+              </li>
+              <li class="w3-padding-16">
+                <img src="/w3images/gondol.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+                <span class="w3-large">Ipsum</span><br>
+                <span>Praes tinci sed</span>
+              </li>
+              <li class="w3-padding-16">
+                <img src="/w3images/skies.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+                <span class="w3-large">Dorum</span><br>
+                <span>Ultricies congue</span>
+              </li>
+              <li class="w3-padding-16 w3-hide-medium w3-hide-small">
+                <img src="/w3images/rock.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+                <span class="w3-large">Mingsum</span><br>
+                <span>Lorem ipsum dipsum</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div><br>
+    </div>
+    <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
+      <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Previous</button>
+      <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button>
+      <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+    </footer>
+  </body>
 </html>
