--- a/index.html
+++ b/index.html
@@ -97,23 +97,23 @@
             <ul class="w3-ul w3-hoverable w3-white">
               <li class="w3-padding-16">
                 <img src="/w3images/workshop.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-                <span class="w3-large">Lorem</span><br>
-                <span>Sed mattis nunc</span>
+                <span class="w3-large">Redbull</span><br>
+                <span>Max Verstappen & Sergio Perez</span>
               </li>
               <li class="w3-padding-16">
                 <img src="/w3images/gondol.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-                <span class="w3-large">Ipsum</span><br>
-                <span>Praes tinci sed</span>
+                <span class="w3-large">Ferrari</span><br>
+                <span>Charles Leclerc & Carlos Sainz</span>
               </li>
               <li class="w3-padding-16">
                 <img src="/w3images/skies.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-                <span class="w3-large">Dorum</span><br>
-                <span>Ultricies congue</span>
+                <span class="w3-large">Mercedes</span><br>
+                <span>Lewis Hamilton & George Russell</span>
               </li>
               <li class="w3-padding-16 w3-hide-medium w3-hide-small">
                 <img src="/w3images/rock.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-                <span class="w3-large">Mingsum</span><br>
-                <span>Lorem ipsum dipsum</span>
+                <span class="w3-large">McLaren</span><br>
+                <span>Lando Norris & Daniel Ricciardo</span>
               </li>
             </ul>
           </div>
